<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMBC Ringer</string>
    <string name="app_version">v0.2 alpha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toggleButton">Ringer</string>
    <string name="activity_splash">UMBC Ringer</string>
    <string name="Frank">Frank Zastawnik</string>
    <string name="Esther">Esther Ho</string>
    <string name="Grace">Grace Chandler</string>
    <string name="title_activity_ringer">Ringer</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_password">Set password</string>
    <string name="pref_user_name_summary">Currently logged in as: </string>
    <string name="pref_password_summary">Password: </string>


    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="menu_settings">"Settings"</string>
    <string name="syncbttn">Sync Account</string>

</resources>
