<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical">




    <TextView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:textSize="40sp"
        android:text="@string/activity_splash"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="#fd030303"
        android:gravity="center"
        android:singleLine="false"
        android:shadowColor="#a86f6f6f"
        android:password="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/Frank"
        android:id="@+id/textView2"
        android:gravity="center_horizontal|top" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/Grace"
        android:id="@+id/textView4"
        android:gravity="center_horizontal|top" />


</LinearLayout>



